[tool.poetry]
name = "Biluppgifter Discord Bot"
version = "0.0.1"
description = "Webscrapes the www.biluppgifter.se website to get info about swedish vehicles based on licenseplate number."
authors = ["officialskillarn@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
